GL cts gtf30.GL3Tests.sgis_texture_lod.sgis_texture_lod_basic_getter failure
GTF-GL33.gtf30.GL3Tests.sgis_texture_lod.sgis_texture_lod_basic_getter
GTF-GL46.gtf30.GL3Tests.sgis_texture_lod.sgis_texture_lod_basic_getter
These tests fail on both Iris and i965, m64 only (m32 they still pass):
ERROR/sgis_texture_lod_basic_getter: ERROR:sgis_texture_lod_basic_getter:GL_TEXTURE_MAX_LOD, 2147483647 != 0
Bisected to:
commit 53c36dfcfe3eb3749a53267f054870280afb0d71
Author: Dylan Baker <dylanx.c.baker@intel.com>
Date: Mon Sep 10 10:22:42 2018 -0700
replace IROUND with util functions
This adds two new util functions to rounding.h, _mesa_iroundf and
mesa_lround, which are just wrappers around roundf and round, that cast
to int and long int respectively. This is possible since mesa recently
dropped support for VC2013, since 2015 and 2017 support roundf.
Reviewed-by: Marek Olšák <marek.olsak@amd.com>
Reviewed-by: Kristian H. Kristensen <hoegsberg@google.com>
Reviewed-by: Matt Turner <mattst88@gmail.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/3024>